--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 
 # Name of website
-title: Personal Website
+title: Rafael Charris
 
 # Your name to show in the footer
 author: Rafael Charris
