--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,7 @@ navbar-links:
   Resources:
   - Learn markdown: "https://www.markdowntutorial.com/"
 
+social-network-links:
+  email: "rafaelcharris92@gmail.com"
+  github: rafaelcharris
+  twitter: daattali
