--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,20 @@ social-network-links:
   email: "rafaelcharris92@gmail.com"
   github: rafaelcharris
   twitter: daattali
+  
+# Default YAML values (more information on Jekyll's site)
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      comments: true  # add comments to all blog posts
+      social-share: true # add social media sharing buttons to all blog posts
+  -
+    scope:
+      path: "" # any file that's not a post will be a "page" layout by default
+    values:
+      layout: "page"
+
