--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ defaults:
   -
     scope:
       path: ""
-      type: "posts"
+      type: "post"
     values:
       layout: "post"
       comments: true  # add comments to all blog posts
